Fixed spacing between icons and made it responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -95,8 +95,8 @@ header {
 }
 .container-fluid {
     display: flex;
-    justify-content: flex-start !important;
     padding: 0px;
+    flex-direction: column;
 }
 .navigation-wrapper {
     overflow:auto !important;
@@ -128,7 +128,10 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90px;
+    width: 70px;
+    padding-top: 5px;
+    color: black;
+    text-align: center;
   }
   .sub-menu .menu-title {}
 /* Default height for small devices */
